--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.1
   hydrated_bloc: ^9.1.5
-  intl: any
+  intl: ^0.19.0
   markdown: ^7.2.2
-  material_color_utilities: any
+  material_color_utilities: ^0.11.1
   package_info_plus: ^7.0.0
   path_provider: ^2.1.2
   pub_semver: ^2.1.4
